test/grammar/import/import_main_file_fail_1/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:1
  |
1 | import main
  | ^ There is a circular import reference between module main and main
  |